CORRECT STYLE.CSS

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --secondary-dark-color: #2f303a;
   --primary-decor-color: #2196f3;
   --secondary-decor-color: #188ce8;
-  --primary-border-color: #ececec;
+  --primary-border-color: #ECECEC;
   --secondary-border-color: #EEEEEE;
 }
 
